Fix some flexbox issues on firefox

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-html, body {
+html, body, #container {
     width: 100%;
     height: 100%;
     margin: 0;
@@ -7,11 +7,14 @@ html, body {
 
 body {
   background: #556270;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: nowrap;
-  justify-content: space-around;
-  align-items: center;
+}
+
+#container {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: space-around;
+    align-items: center;
 }
 
 #password-suggestion, #password-history {
@@ -21,10 +24,6 @@ body {
 }
 
 #password-suggestion {
-    /*position: absolute;
-    top:20%;
-    width:95%;
-    text-align: center;*/
     padding: 10px;
     height: 35px;
     color: #eefaf9;
